Addition of Composer file

--- a/public/composer.json
+++ b/public/composer.json
@@ -4,6 +4,7 @@
 	"type": "project",
 	"homepage": "https://codeigniter.com",
 	"license": "MIT",
+
 	"support": {
 		"forum": "http://forum.codeigniter.com/",
 		"wiki": "https://github.com/bcit-ci/CodeIgniter/wiki",
@@ -11,7 +12,8 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=5.2.4"
+		"php": ">=5.2.4",
+		"symfony/console": "2.6.7"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
